--- a/LaMarqueza/Templates/Principal.html
+++ b/LaMarqueza/Templates/Principal.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
@@ -62,10 +62,10 @@
                         {{ user.username | upper}}
                         <a class="nav-link verde-oscuro" href="{% url 'logout' %}">Cerrar Sesion</a>
                         {% else %}
-                        <button type="button " class="btn btn-primary btnInicio" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
+                        <a href="{% url "iniciarsesion" %}"> <button type="button " class="btn btn-primary btnInicio" >
                             Iniciar Sesion
-                        </button>
+                        </button></a>
+                        
 
                         {% endif %}
 
@@ -75,74 +75,7 @@
             </div>
         </div>
     </nav>
-    <!-- Formulario Login -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">
-                        Iniciar Sesion
-                    </h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
-                        id="Cerrar"></button>
-                </div>
-                <div class="modal-body">
 
-                    <form method="post" action="{% url 'login' %}">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Correo electrónico</label>
-                            <input type="email" class="form-control" id="email" name="email">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="password" name="password">
-                            <a href="" class="OlvideMclave"> Olvide Mi Contraseña</a>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-                    </form>
-                    <button type="button" class="position-absolute" id="togglePassword">
-                        <img src='{% static "IMG/VerClave.svg" %}' class="VerClave" />
-                    </button>
-                    
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#registerModal">
-                        Registrarme
-                    </button>
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="registerModalLabel">Registrarme</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form method="post" action="{% url 'register' %}">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Correo electrónico</label>
-                            <input type="email" class="form-control" id="email" name="email">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="password1" name="password">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password2" class="form-label">Confirmar Contraseña</label>
-                            <input type="password" class="form-control" id="password2" name="password2">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Registrarme</button>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Contenido -->
     {% block Boddy %}
 
