Actualizacion de archivos

--- a/LaMarqueza/Templates/registration/login.html
+++ b/LaMarqueza/Templates/registration/login.html
@@ -10,9 +10,15 @@
     <div class="d-flex">
         
         <form method="post" action="{% url 'login' %}">
+            
             {% csrf_token %}
-            
-            
+            {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
     
             <div class="mb-3">
                 <label for="email" class="form-label">Correo electrónico</label>
@@ -24,9 +30,7 @@
                 <a href="" class="OlvideMclave"> Olvide Mi Contraseña</a>
             </div>
             <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-            <a href="{% url "registrarse" %}">
-                <button type="button" class="btn btn-secondary ml-1">Registrarse</button>
-            </a>
+            
         </form>
         
     </div>
