Cambios en contactenos

--- a/LaMarqueza/Templates/Contactenos.html
+++ b/LaMarqueza/Templates/Contactenos.html
@@ -2,5 +2,103 @@
 {% load static %}
 {% block Titulo %}Contactenos{%endblock Titulo %}
 {% block Boddy %}
+<h1 class="H1Contacto">Nuestra Ubicación</h1>
+<div class="containermap">
+    <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d358897.475030395!2d-75.5566029411413!3d6.355931006506578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwMjgnNTQuMyJOIDc1wrAxMicyNC43Ilc!5e0!3m2!1ses-419!2sco!4v1712708143083!5m2!1ses-419!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</div>
+<div class="card-group card-container">
+    <div class="card Fcafe">
+        <div class="card-body">
+            <a class="navbar-brand d-flex align-items-center PiePagFinca" href="{% url 'index' %}"
+                style="line-height: 0.8">
+                <img src='{% static "IMG/granja.png" %}' alt="Bootstrap" width="40%" height="40%"
+                    style="border-radius: 100%" />
+                <p>
+                    <span class="naranja">Finca</span> <br />
+                    <span class="verde-oscuro">La Marqueza</span>
+                </p>
+            </a>
+        </div>
+    </div>
+
+    <div class="card Fcafe">
+        <div class="card-body">
+            <h5 class="card-title textNosotros">Nosotros</h5>
+            <a class="card-text info" href="{% url 'nosotros' %}" style="line-height: 0.8">Quienes Somos
+            </a>
+            <br />
+            <a class="card-text info" href="{% url 'contactenos' %}" style="line-height: 0.8">Trabaja Con Nosotros
+            </a>
+        </div>
+    </div>
+
+    <div class="card Fcafe">
+        <div class="card-body">
+            <h5 class="card-title">Contactenos</h5>
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/facebook-square.svg" %}' class="iconoInfo" alt="" /> Finca
+                La Marqueza
+            </a>
+            <br />
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/instagram.svg" %}' class="iconoInfo" alt="" />
+                @FincaLaMarqueza
+            </a>
+            <br />
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/whatsapp.svg" %}' class="iconoInfo" /> (57)304 218 9925
+            </a>
+            <br />
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/icons8-gmail-144.svg" %}' class="iconoInfo" alt="" />
+                Hector_garcia23231@elpoli.edu,co
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="card-group card-container">
+    
+    
+    <div class="card Fcafe">
+        <div class="card-body">
+        <a href="#" class="iconoInfo">
+            <img src='{% static "IMG/facebook-square.svg" %}' class="iconoInfo" alt="" /> Finca
+            La Marqueza
+        </a>
+        <br />
+        </div>
+    </div>
+
+    <div class="card Fcafe">
+        <div class="card-body">
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/instagram.svg" %}' class="iconoInfo" alt="" />
+                @FincaLaMarqueza
+            </a>
+            <br />
+        </div>
+    </div>
+
+    <div class="card Fcafe">
+        <div class="card-body">
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/whatsapp.svg" %}' class="iconoInfo" /> (+57)304 218 9925
+            </a>
+        </div>
+    </div>
+    <div class="card Fcafe">
+        <div class="card-body">
+            <a href="#" class="iconoInfo">
+                <img src='{% static "IMG/icons8-gmail-144.svg" %}' class="iconoInfo" alt="" />
+                Hector_garcia23231@elpoli.edu,co
+            </a>
+        </div>
+    </div>
+
+   
+</div>
 
 {% endblock Boddy %}
