Listo Para Primera Socializacion

--- a/LaMarqueza/Templates/Nosotros.html
+++ b/LaMarqueza/Templates/Nosotros.html
@@ -13,7 +13,7 @@
         <div class="row">
             <!-- Seccion Quienes Somos 1-->
             <div class="col col-lg-6">
-                <img src='{% static "IMG/Finca.jpg" %}' class="img-fluid rounded-circle w-100" alt="..." />
+                <img src='{% static "IMG/Fincalamarqueza.jpg" %}' class="img-fluid rounded-circle w-100 my-image" alt="..." />
             </div>
             <div class="col-md-5">
                 <div class="card-body">
