--- a/LaMarqueza/Templates/registration/login.html
+++ b/LaMarqueza/Templates/registration/login.html
@@ -1,40 +1,51 @@
 {% extends "Principal.html" %}
 {% load static %}
-{% block Titulo %}Login{% endblock Titulo %}
+{% block Titulo %}Iniciar sesión{% endblock Titulo %}
 
 
 {% block Boddy %}
 
-<div class="container d-flex justify-content-center align-items-center loginbot">
 
-    <div class="d-flex">
-        
-        <form method="post" action="{% url 'login' %}">
-            
-            {% csrf_token %}
-            {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
+
+<div class="card-group card-container2">
+
+    <div class="container d-flex justify-content-center align-items-center loginbot card-container3">
+
+        <div class="d-flex">
     
-            <div class="mb-3">
-                <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" name="email">
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" name="password">
-                <a href="" class="OlvideMclave"> Olvide Mi Contraseña</a>
-            </div>
-            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-            
-        </form>
-        
+            <form method="post" action="{% url 'login' %}">
+    
+                {% csrf_token %}
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                        {% endfor %}
+                </ul>
+                {% endif %}
+    
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico *</label>
+                    <input type="email" class="form-control" id="email" name="email">
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña *</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                    <a href="" class="OlvideMclave"> Olvide Mi Contraseña</a>
+                </div>
+                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                <a href="{% url 'registrarse' %}"><button type="button" class="btn btn-primary">Registrate</button></a>
+    
+    
+            </form>
+    
+        </div>
+    
     </div>
-    
+
+
+
+
 </div>
 
 
