--- a/LaMarqueza/Templates/registration/register.html
+++ b/LaMarqueza/Templates/registration/register.html
@@ -4,27 +4,42 @@
 
 
 {% block Boddy %}
+<div class="card-group card-container2">
+    <div class="container d-flex justify-content-center align-items-center loginbot card-container3">
 
-<div class="container d-flex justify-content-center align-items-center loginbot">
 
-    <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" name="email">
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" name="password">
-            <a href="" class="OlvideMclave"> Olvide Mi Contraseña</a>
-        </div>
-        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-        <a href="{% url "registrarse" %}">
-            <button type="button" class="btn btn-secondary ml-1">Registrarse</button>
-        </a>
-    </form>
-    
+        <form method="post" action="{% url 'registrer' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo electrónico *</label>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña *</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
 
+            <div class="mb-3">
+                <label for="password2" class="form-label">Confirmar contraseña *</label>
+                <input type="password" class="form-control" id="password2" name="password2">
+            </div>
+            <div class="mb-3">
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                        {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+            <button type="submit" class="btn btn-primary">Registrarse</button>
+            <a href="{% url 'iniciarsesion' %}">
+                <button type="button" class="btn btn-secondary ml-1">Iniciar sesion</button>
+            </a>
+        </form>
+
+
+    </div>
 </div>
 
 
