--- a/LaMarqueza/Templates/Administrador.html
+++ b/LaMarqueza/Templates/Administrador.html
@@ -11,6 +11,9 @@
       <a class="nav-link" href="{% url "productosadmin" %}">Productos</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="{% url "categoriasadmin" %}">Categorias de Producto</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="#">Ventas</a>
     </li>
     <li class="nav-item">
